# Representative-Submodular-Maximization

./: AssignGroups.cpp  AssignGroups.h  AuxiliaryFunctionG.cpp  AuxiliaryFunctionG.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  CompareKGreedyWithBruteForce.cpp  CompareKGreedyWithKFactorialGreedy.cpp  CompareKGreedyWithLocalSearch.cpp  CompareKGreedyWithNatualGreedy.cpp  CoverFunction.cpp  CoverFunction.h  FairnessFirst.cpp  FairnessFirst.h  Function.cpp  Function.h  GenerateManualGraph.cpp  Graph.cpp  Graph.h  GreedyFirst.cpp  GreedyFirst.h  InfluenceFunction.cpp  InfluenceFunction.h  LocalSearch.cpp  LocalSearch.h  NaturalGreedy.cpp  NaturalGreedy.h  READ ME.txt  README.md  ReachabilityFunction.cpp  ReachabilityFunction.h  TIMCoverage.cpp  TIMCoverage.h  kFactorialGreedy.cpp  kFactorialGreedy.h  kGreedy.cpp  kGreedy.h
graphs/: CA-GrQc.txt  CA-HepPh.txt  ManualGraph1.txt  ManualGraph2.txt  ManualGraph3.txt  ManualgraphComments.txt  NetHept.txt
